--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
   flex-direction: column;
   justify-content: center;
 }
-#canvas {
+#canvas,
+#canvas2 {
   background: linear-gradient(
     180deg,
     rgba(2, 0, 36, 1) 0%,
